@@ -1,3 +1,10 @@
+2010-04-05 Borut Razem <borut.razem AT siol.net>
+
+	* sdcc/sim/ucsim/gui.src/Makefile.in:
+	  fixed for Solaris if CURSES_PKGS is empty
+	* sdcc/device/include/mcs51/at89c51snd1c.h:
+	  sdcc library license changed to GPL+LE
+
 2010-04-04 Borut Razem <borut.razem AT siol.net>
 
 	* device/include/hc08/mc68hc908jb8.h:
